--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hello, World | Powered by Robo.js</title>
 	</head>
+	<div id="modal-root"></div>
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/app/index.tsx"></script>
